--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,7 +17,7 @@ management:
       enabled: true
 
 logging:
-  config: classpath:log4j2.xml
+  config: classpath:logback.xml
 
 spring:
   jackson:
