--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up JDK 22
         uses: actions/setup-java@v2
         with:
-          distribution: 'openjdk'
+          distribution: 'zulu'
           java-version: '22'
 
       - name: Grant execute permission for gradlew
