--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,15 +14,15 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up JDK 22
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
-          distribution: 'zulu'
           java-version: '22'
+          distribution: 'zulu'
 
-      - name: Grant execute permission for gradlew
+      - name: Grant execute permissions to Gradle wrapper
         run: chmod +x gradlew
 
       - name: Cache Gradle packages
@@ -35,45 +35,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      - name: Build with Gradle
-        run: ./gradlew build --no-daemon
-
-      - name: Run tests with Gradle
-        run: ./gradlew test --no-daemon
-
-      - name: Generate JaCoCo report
-        run: ./gradlew jacocoTestReport --no-daemon
-
-      - name: Upload JaCoCo report
-        uses: actions/upload-artifact@v2
-        with:
-          name: jacoco-report
-          path: build/reports/jacoco/test/html
-
-      - name: Download JaCoCo Badge Generator
-        run: wget https://github.com/cicirello/jacoco-badge-generator/releases/download/v1.0.3/jacoco-badge-generator-1.0.3.zip && unzip jacoco-badge-generator-1.0.3.zip
+      - name: Run test
+        run: ./gradlew test
 
       - name: Generate JaCoCo Badge
-        run: |
-          java -jar jacoco-badge-generator-1.0.3.jar \
-            --reportPath build/reports/jacoco/test/html/index.html \
-            --badgeOutputPath badge.svg
-
-      - name: Upload JaCoCo Badge
-        uses: actions/upload-artifact@v2
+        uses: cicirello/jacoco-badge-generator@v2
         with:
-          name: jacoco-badge
-          path: badge.svg
-
-      - name: Check JaCoCo Coverage Percentage
-        id: coverage
-        run: |
-          COVERAGE=$(grep -oP 'class="ctr2">[^<]+' build/reports/jacoco/test/html/index.html | tail -1 | grep -oP '[0-9]+')
-          echo "COVERAGE=$COVERAGE" >> $GITHUB_ENV
-
-      - name: Fail if Coverage is Below Threshold
-        run: |
-          if [ $COVERAGE -lt 80 ]; then
-            echo "Code coverage ($COVERAGE%) is below the acceptable threshold (80%)."
-            exit 1
-          fi
+          jacoco-csv-file: build/reports/jacoco/test/jacocoTestReport.csv
