--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -47,7 +47,7 @@ jobs:
       - name: Generate JaCoCo Badge
         uses: cicirello/jacoco-badge-generator@v2
         with:
-          jacoco-csv-file: build/reports/jacoco/test/jacocoTestReport.csv
+          reportFile: build/reports/jacoco/test/jacocoTestReport.xml
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
