--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '22'
-          distribution: 'openjdk'
+          distribution: 'zulu'
 
       - name: Grant execute permissions to Gradle wrapper
         run: chmod +x gradlew
