--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -18,10 +18,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Set up JDK 22
+      - name: Run detekt
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: detekt
+
+      - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
-          java-version: '22'
+          java-version: '21'
           distribution: 'zulu'
 
       - name: Grant execute permissions to Gradle wrapper
