--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.application.name=catalog
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=INFO
+
+aws.paramstore.enabled=true
+aws.paramstore.prefix=/config
+aws.paramstore.name=catalog-api
+aws.paramstore.profileSeparator=
