--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -26,7 +26,7 @@ spring:
       WRITE_DATES_WITH_ZONE_ID: true
   data:
     mongodb:
-      uri: {$DB_URI}
+      uri: mongodb://3.139.72.14:27017/catalog
       uuid-representation: standard
 
 system:
