--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -26,7 +26,7 @@ spring:
       WRITE_DATES_WITH_ZONE_ID: true
   data:
     mongodb:
-      uri: mongodb://3.139.72.14:27017/catalog
+      uri: mongodb://root:test123456@3.135.184.216:27017/
       uuid-representation: standard
 
 system:
@@ -34,4 +34,4 @@ system:
   collection:
     product: product
   sns:
-    product: product
+    product: product.fifo
