--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -26,7 +26,7 @@ spring:
       WRITE_DATES_WITH_ZONE_ID: true
   data:
     mongodb:
-      uri: mongodb://root:test123456@3.135.184.216:27017/catalog
+      uri: mongodb://18.191.174.5:27017/catalog
       uuid-representation: standard
 
 system:
