fix app prod yaml

--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -28,6 +28,8 @@ spring:
     mongodb:
       uri: ${/config/catalog-api_prod/mongoUri}
       uuid-representation: standard
+  config:
+    import: "aws-parameterstore:"
 
 system:
   id-service: catalog-api
