--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -28,6 +28,9 @@ spring:
     mongodb:
       uri: ${mongoUri}
       uuid-representation: standard
+  config:
+    import:
+      - aws-parameterstore:/config/catalog-api_prod/
 
 system:
   id-service: catalog-api
